Added pipeline structure

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,6 @@
+2018-08-28 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.2.0.89: Adding pipelines
+2018-08-10 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.1.0: First release
 2018-08-02 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.0.0: Initial version
