--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2018-09-14 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.3.1.140: Fix #1 Issue promoting on Windows
+
+2018-08-31 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.3.0.138: Adding environments and services
 2018-08-28 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.2.0.89: Adding pipelines
 2018-08-10 Laurent Rochette <lrochette@electric-cloud.com>
