--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
+2018-09-18 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.6.0.177: Add support for application
+
 2018-09-17 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.5.0.176: Add support for catalog
   * 0.4.0.175: Add support for release
 
 2018-09-14 Laurent Rochette <lrochette@electric-cloud.com>
