--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2018-09-19 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.7.0.196: Add support for dashboard and reports
+
 2018-09-18 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.6.0.179: Add support for application
 
