--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2018-09-24 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.7.2.231: Manage when pipeline.groovy returns more than 1 pipeline 
+               through looping
+
 2018-09-20 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.7.1.207: Fix #2: load any .groovy or .dsl at top level
 
