--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2018-1-=16 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.8.1.249: Add component templates
+
 2018-09-27 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.8.0.245: Add mechanism for broadcast
 
