--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2019-02-22 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.8.4.284: Support clusters under environments
+
+2019-02-21 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.8.3.278: Support items under dashboards
+
 2018-10-17 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.8.2.252: Merge to support generateDsl code
 
