--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 2019-03-08 Laurent Rochette <lrochette@electric-cloud.com>
+  * 0.9.2: Fixed "persister" issue
+           Add catalogItem support
+
+2019-03-08 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.9.1.308: Merge from upstream for NMB-27865
 
 2019-02-25 Laurent Rochette <lrochette@electric-cloud.com>
@@ -8,7 +12,7 @@
   * 0.8.4.284: Support clusters under environments
 
 2019-02-21 Laurent Rochette <lrochette@electric-cloud.com>
-  * 0.8.3.278: Support items under dashboards
+  * 0.8.3.278: Support widgets under dashboards
 
 2018-10-17 Laurent Rochette <lrochette@electric-cloud.com>
   * 0.8.2.252: Merge to support generateDsl code
