Remove EC-Admin dependency

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 2019-03-14 Laurent Rochette <lrochette@electric-cloud.com>
+  * 1.0.1: Remove EC-Admin dependency
   * 1.0.0: Time to be serious
 
 2019-03-08 Laurent Rochette <lrochette@electric-cloud.com>
