--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2019-04-011 Laurent Rochette <lrochette@electric-cloud.com>
+  * 2.1.0: Issue #34: adding support for ACLs
+
 2019-04-02 Laurent Rochette <lrochette@electric-cloud.com>
   * 2.0.1: Issue #33: adding support for resourcePools
 
