--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-2019-05-30 Laurent Rochette <lrochette@electric-cloud.com>
+2019-06-25 Laurent Rochette <lrochette@cloudbees.com>
+  * 2.1.3: Fixed issue with "." on DSL
+
+2019-05-30 Laurent Rochette <lrochette@cloudbees.com>
   * 2.1.2: convert deployMain and deployPost to ec-perl to work around 8K limit
 
 2019-04-17 Laurent Rochette <lrochette@electric-cloud.com>
