--- a/help/help.adoc
+++ b/help/help.adoc
@@ -125,6 +125,10 @@ image:cloudbees-common::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[import
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 3.1.0
+
+* The plugin has been switched to use the new plugin EC-Git in place of the old ECSCM-Git.
+
 === EC-DslDeploy 3.0.2
 
 * The documentation has been migrated to the main documentation site.
