--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2022-08-05 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.3: Fixed a few bugs that were caused by incremental import support
+
 2022-07-06 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.2: Added support for overwrite mode in the main deploy step for single DSL files
 
