--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2022-09-14 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.4: BEE-23820 - Fixed issue with exceptions that should be retried
+
 2022-08-05 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.3: Fixed a few bugs that were caused by incremental import support
 
