--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2022-10-07 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.6: BEE-19320 - Support single and double quotes in the entity names
+
 2022-09-28 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.5: BEE-24274 - Fixed exception during import DSL using service catalog item
 
