--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
 2022-10-07 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.6: BEE-19320 - Support single and double quotes in the entity names
            BEE-22186 - Fixed incremental import in the importDslFromGitNew procedure when use it as subproceduce
+           BEE-18910 - Added support for property detail information like description, etc
 
 2022-09-28 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.5: BEE-24274 - Fixed exception during import DSL using service catalog item
