--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,12 @@
+2022-10.27 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.7: BEE-18910 - Added support for property detail information like description, etc
+
 2022-10-11 Irina Tykhan <itykhan@cloudbees.com>
   * 4.1.6: BEE-23021 - Handle DSL import of completed releases - EC-DslDeploy side
 
 2022-10-07 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.6: BEE-19320 - Support single and double quotes in the entity names
            BEE-22186 - Fixed incremental import in the importDslFromGitNew procedure when use it as subproceduce
-           BEE-18910 - Added support for property detail information like description, etc
 
 2022-09-28 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.5: BEE-24274 - Fixed exception during import DSL using service catalog item
