--- a/help/help.adoc
+++ b/help/help.adoc
@@ -16,67 +16,67 @@ IMPORTANT: For all parameter descriptions below, required parameters are shown i
 
 === InstallDsl
 
-Deploy a DSL file structure from an Artifact Version on your {CD} server.
+Deploy a DSL file structure from an Artifact Version on your {PRODUCT} server.
 
-[cols=",",options="header",]
+[cols="1a,1a",options="header",]
 |===
 |Parameter |Description
 |Artifact Name |The name of your artifact.
-|Artifact Version |The version of the artifact you want to deploy. If empty, it will deploy the latest version.
+|Artifact Version |The version of the artifact you want to deploy. If empty, the latest version is deployed.
+NOTE: Use an empty version only in your `Dev` environment. In higher environments, it's recommended that you use a specific version that has been tested in lower environments.
 
-*Note:* Use an empty version only in your Dev environment. In higher environments, the best practices recommend that you use a specific version that has been tested in lower environments.
-|Pool or Resource |The name of the pool or resource where the artifact will be retrieved. DSL is evaluated on the server so all system actions (like file reads) will be evaluated on one of the server nodes.
+|Pool or Resource |The name of the pool or resource where the artifact will be retrieved. The DSL is evaluated on the server so all system actions, such as file reads, will be evaluated on a server node.
 
-Default value is local.
-|Retrieve on All server nodes |Use this option when running in a cluster with local workspace as the artifact version needs to be retrieved on all nodes (as the system pick a random server node for each action). Use alongside a resource pool covering all server node agents for the parameter above.
+Default value is `local`.
+|Retrieve on All server nodes |Use this option when running in a cluster with a local workspace, as the artifact version needs to be retrieved on all nodes (as the system pick a random server node for each action). Use alongside a resource pool covering all server node agents for the parameter above.
 
-Default is "false"
+Default is `false`
 |Overwrite mode |Select to enable overwrite mode. If the object exists, all attributes and child objects are overwritten by the values in the DSL files.
 |===
 
-image:cloudbees-common::cd-plugins/ec-dsldeploy/help/installdsl.png[installDsl parameters]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/installdsl.png[installDsl parameters]
 
 === InstallDslFromDirectory
 
-Deploy a DSL file structure from a directory on your {CD} server.
+Deploy a DSL file structure from a directory on your {PRODUCT} server.
 
-This procedure main usage is to set up a CI process. It will extract your code from your SCM in a local directory on your Dev {CD} server, and deploy it from there.
+This procedure main usage is to set up a CI process. It will extract your code from your SCM in a local directory on your `Dev` {PRODUCT} server, and deploy it from there.
 
-[cols=",",options="header",]
+[cols="1a,1a",options="header",]
 |===
 |Parameter |Description
-|Directory Path |The location of the DSL code on your Dev {CD} server.
-|Server Pool or Resource |The name of the pool or resource where the artifact will be retrieved. Use "." if you have retrieved in your workspace.
+|Directory Path |The location of the DSL code on your `Dev` {PRODUCT} server.
+|Server Pool or Resource |The name of the pool or resource where the artifact will be retrieved. Use `.` if you have retrieved in your workspace.
 |Overwrite mode |Select to enable overwrite mode. If the object exists, all attributes and child objects are overwritten by the values in the DSL files.
-|Additional argument(s) for evalDsl call. ie: --timeout or --debug. Values used in --timeout will be used as timeouts for ectool, evalDsl, and the job step time out used to import the DSL.
+|Additional argument(s)| For evalDsl calls, additional arguments such as  `--timeout` or `--debug`. Values used in `--timeout` will be used as timeouts for ectool, evalDsl, and the job step time out used to import the DSL.
 |Ignore failures |Ignore failures during import of DSL files.
 |Local mode |Do not send files to the server with help of clientFiles argument of the evalDsl operation in local mode.
 |===
 
-image:cloudbees-common::cd-plugins/ec-dsldeploy/help/installdslfromdirectory.png[installDslFromDirectory parameters]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/installdslfromdirectory.png[installDslFromDirectory parameters]
 
 === InstallProject
 
-Deploy DSL file structure from a directory on your {CD} server as a project.
+Deploy DSL file structure from a directory on your {PRODUCT} server as a project.
 
 The main purpose of the procedure to be a part of installDslFromDirectory procedure.
 
-[cols=",",options="header",]
+[cols="1a,1a",options="header",]
 |===
 |Parameter |Description
-|Project Name |Name of the project to instal.
-|Project directory |The location of the project DSL code on your Dev CloudBeed CD server.
+|Project Name |Name of the project to install.
+|Project directory |The location of the project DSL code on your `Dev` {PRODUCT} server.
 |Overwrite mode |Select to enable overwrite mode. If the object exists, all attributes and child objects are overwritten by the values in the DSL files.
-|Additional argument(s) for evalDsl call. ie: --timeout or --debug. Values used in --timeout will be used as timeouts for ectool, evalDsl, and the job step time out used to import the DSL.
+|Additional argument(s)| For evalDsl calls, additional arguments such as  `--timeout` or `--debug`. Values used in `--timeout` will be used as timeouts for ectool, evalDsl, and the job step time out used to import the DSL.
 |===
 
-image:cloudbees-common::cd-plugins/ec-dsldeploy/help/installproject.png[installProject parameters]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/installproject.png[installProject parameters]
 
 === GenerateDslToDirectory
 
-Export DSL for a top level {CD} object, with options for which child objects and values to include. Export the DSL in separate files in a directory tree representing the object hierarchy, for ease of editing and management.
+Export DSL for a top level {PRODUCT} object, with options for which child objects and values to include. Export the DSL in separate files in a directory tree representing the object hierarchy, for ease of editing and management.
 
-[cols=",",options="header",]
+[cols="1a,1a",options="header",]
 |===
 |Parameter |Description
 |Directory path |Folder where the code is generated.
@@ -87,13 +87,13 @@ Export DSL for a top level {CD} object, with options for which child objects and
 |Suppress Defaults |Exclude from the generated DSL properties with default value.
 |Suppress Parent |Exclude from the generated DSL properties referred to object parent.
 |Include ACLs |Include in ACLs for objects.
-|Include All Children |Include in the generated DSL all object children. If True - ignore value of 'Include Children' parameter.
-|Include children |Comma-separated list of object children the DSL should be generated for.
-|Include Children in Same File |Include in the generated DSL all object children. If True - ignore value of 'Include Children' parameter.
-|Children in Different Files |Comma-separated list of patterns to include, like pipelines, procedures.*, applications.applicationTiers.components
+|Include All Children |Include in the generated DSL all object children. If `True`, the value of the `Include Children` parameter is ignored.
+|Include children |A comma-separated list of object children the DSL should be generated for.
+|Include Children in Same File |Include in the generated DSL all object children. If `True`, the value of the `Include Children` parameter is ignored.
+|Children in Different Files | A comma-separated list of patterns to include, like pipelines, procedures.`*`, applications.applicationTiers.components
 |===
 
-image:cloudbees-common::cd-plugins/ec-dsldeploy/help/generatedsltodirectory.png[generateDslToDirectory parameters]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/generatedsltodirectory.png[generateDslToDirectory parameters]
 
 === ImportDslFromGit
 
@@ -101,26 +101,28 @@ Import DSL file structure from a Git repository.
 
 This procedure main usage is to set up a CI process.
 
-[cols=",",options="header",]
+[cols="1a,1a",options="header",]
 |===
 |Parameter |Description
-|Server Resource |The resource where the DSL files will be checked out from git and imported to the {CD} server.
-|Destination Directory |The directory on the resource where the source tree will be created and from where the DSL files are read to be imported in {CD} server.
+|Server Resource |The resource where the DSL files will be checked out from git and imported to the {PRODUCT} server.
+|Destination Directory |The directory on the resource where the source tree will be created and from where the DSL files are read to be imported in {PRODUCT} server.
 |Cleanup? |This option will delete the destination directory with the source tree after the job execution.
 |Overwrite mode |Select to enable overwrite mode. If the object exists, all attributes and child objects are overwritten by the values in the DSL files.
 |Configuration |The name of a saved SCM configuration.
-|Git repository |URL to the repository to pull from. ie: 'git://server/repo.git'.
-|Commit Hash |The Commit Hash to update the index. Note: This will move the HEAD.
-|Remote Branch |The name of the Git branch to use. ie: 'experimental'.
+|Git repository |The URL to the repository to pull from, for example `git://server/repo.git`.
+|Commit Hash |The Commit Hash to update the index.
+
+NOTE: This will move the HEAD.
+|Remote Branch |The name of the Git branch to use, for example `my_feature`.
 |Clone? |This option will clone a repository into a newly created directory.
 |Overwrite? |This option will overwrite a repository if it already exists.
 |Depth |Create a shallow clone with a history truncated to the specified number of revisions.
-|Tag |Provide the name of a specific tag to checkout after the clone command.
+|Tag |Provide the name of a specific tag to check out after the clone command.
 |Ignore failures |Ignore failures during import of DSL files.
 |Local mode |Do not send files to the server with help of clientFiles argument of the evalDsl operation in local mode.
 |===
 
-image:cloudbees-common::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[importDslFromGit parameters]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[importDslFromGit parameters]
 
 [[releaseNotes]]
 == Release notes
@@ -128,7 +130,7 @@ image:cloudbees-common::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[import
 === EC-DslDeploy 4.1.7
 
 * Added support for property detail information like description, etc
-* Fixed incremental import in the importDslFromGitNew procedure when use it as subproceduce
+* Fixed incremental imports in the importDslFromGitNew procedure when used as a subprocedure
 
 === EC-DslDeploy 4.1.6
 
@@ -151,7 +153,7 @@ image:cloudbees-common::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[import
 === EC-DslDeploy 4.1.2
 
 * Added support for overwrite mode in the main deploy step for single DSL files
-* Added support for Triggers import/export
+* Added support for triggers import/export
 
 === EC-DslDeploy 4.1.1
 
@@ -159,35 +161,35 @@ image:cloudbees-common::cd-plugins/ec-dsldeploy/help/importdslfromgit.png[import
 
 === EC-DslDeploy 4.1.0
 
-* Enhanced import procedure to perform partial/incremental import
+* Enhanced the import procedure to perform partial/incremental import
 
 === EC-DslDeploy 4.0.4
 
 * Internal improvements
 
 === EC-DslDeploy 4.0.3
-Fixed importDslFromGitNew doesn't proceed additionalArguments property into installDslFromDirectory step
+* Fixed importDslFromGitNew doesn't proceed additionalArguments property into installDslFromDirectory step
 
 === EC-DslDeploy 4.0.2
-Fixed unexposed DSL Import Timeouts preventing Large DSL Imports
+* Fixed unexposed DSL import timeouts preventing large DSL imports
 
 === EC-DslDeploy 4.0.1
 
-Added configuration object support to DslDeploy plugin - plugin side
+* Added configuration object support to DslDeploy plugin - plugin side
 
 === EC-DslDeploy 4.0.0
 
 * Added new procedure to provide import from Git functionality using EC-Git plugin
-* Fixed Command Task Contents being duplicated when Tasks are Contained in a Task Group
+* Fixed command task contents duplicates for tasks contained in a task group
 * Added metadata for GitSync and scmType level propertysheet
-* Fixed export not generating command task Groovy
+* Fixed an issue with exports not generating the Groovy command task
 * Removed import old services from EC-DslDeploy Plugin
 * Fixed import DSL for projects with application microservice model when all children are in separate files
 
 === EC-DslDeploy 3.0.3
 * Added credentials import/export support
 * Fixed files path to fix deletion issue on Windows
-* Fixed 'Relative path to DSL files' parameter in importDslFromGit
+* Fixed `Relative path to DSL files` parameter in importDslFromGit
 
 === EC-DslDeploy 3.0.2
 
@@ -207,24 +209,24 @@ Added configuration object support to DslDeploy plugin - plugin side
 
 === EC-DslDeploy 2.2.1
 
-* The plugin is adopted to use new 'clientFiles' argument in evalDsl API what allows to remove limitation of shared folder usage for DSL import
-* Fixed issue with import of 'release' property sheet under the project
-* Fixed issue for 'generateDslToDirectory' with includeAcls='1'
+* The plugin is adopted to use new `clientFiles` argument in evalDsl API what allows to remove limitation of shared folder usage for DSL import
+* Fixed issue with import of `release` property sheet under the project
+* Fixed issue for `generateDslToDirectory` with `includeAcls='1'`
 
 === EC-DslDeploy 2.2.0
 
-* Added 'overwrite' parameter to install procedures
-* Added 'generateDslToDirectory' procedure
-* Added 'importDslFromGit' procedure
-* Enhanced 'installDsl' procedure to support deploy of more types of objects
+* Added `overwrite` parameter to install procedures
+* Added `generateDslToDirectory` procedure
+* Added `importDslFromGit` procedure
+* Enhanced `installDsl` procedure to support deploy of more types of objects
 
 === EC-DslDeploy 2.1.3
 
-* Fixed issue with "." on DSL
+* Fixed issue with `.` on DSL
 
 === EC-DslDeploy 2.1.2
 
-* Converted deployMain and deployPost to ec-perl
+* Converted deployMain and deployPost to EC-Perl
 
 === EC-DslDeploy 2.1.0
 
@@ -237,7 +239,7 @@ Added configuration object support to DslDeploy plugin - plugin side
 === EC-DslDeploy 1.0.2
 
 * Refactor tests and add sample code as test.
-* Refactored InstallDsl and installDslFromDirectory .
+* Refactored InstallDsl and installDslFromDirectory
 
 === EC-DslDeploy 1.0.1
 
