--- a/help/help.adoc
+++ b/help/help.adoc
@@ -105,7 +105,7 @@ This procedure main usage is to set up a CI process.
 |===
 |Parameter |Description
 |Server Resource |The resource where the DSL files are checked out from Git and imported to the {PRODUCT} server.
-|Destination Directory |The directory on the resource where the source tree will be created and from where the DSL files are read to be imported in {PRODUCT} server.
+|Destination Directory |The directory on the resource where the source tree is created and from where the DSL files are read to be imported in {PRODUCT} server.
 |Cleanup? |This option will delete the destination directory with the source tree after the job execution.
 |Overwrite mode |Select to enable overwrite mode. If the object exists, all attributes and child objects are overwritten by the values in the DSL files.
 |Configuration |The name of a saved SCM configuration.
