--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2022-11.23 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.8: BEE-27417 - Added support to run sub procedure 'importDslFromGitNew' for EC-DslDeploy plugin
+
 2022-10.27 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.7: BEE-18910 - Added support for property detail information like description, etc
            BEE-22186 - Fixed incremental import in the importDslFromGitNew procedure when use it as subproceduce
