--- a/help/help.adoc
+++ b/help/help.adoc
@@ -154,7 +154,25 @@ argument of the `evalDsl` operation in local mode. Available only if the
 destination directory is accessible from the {CD} server. In a clustered
 deployment, all {PRODUCT} server nodes must have access to this directory.
 |Additional DSL arguments |Additional argument(s) for the `evalDsl` call. For example, `--timeout` or `--debug`. Values used in `--timeout` are used as timeouts for `ectool`, `evalDsl`, and the job step timeout used to import the DSL.
-|Include objects |New line separated list of paths to the objects, that should be synchronized.
+|Include objects |New line separated list of paths to objects to synchronize.
+
+If set, only these objects are synchronized. If empty, all available objects are synchronized.
+
+Examples:
+
+* “/projects“ - all projects
+* “/projects/Default/applications“ - all applications in project 'Default'
+* “/users“ - all users
+* “/projects/Commander/procedures/Master“ - ‘Master' procedure in 'Commander’ project
+* “/projects/*/releases“ - all releases in all projects
+
+[NOTE]
+====
+Objects with depth > 2 are not supported. Examples:
+
+* “/projects/*/releases/release1“
+* “/projects/Default/application/application1/applicationTiers”
+====
 
 If set - synchronize only these objects. If empty - synchronize all available objects.
 |Exclude objects |List of paths to objects to exclude. Exclude nothing by default.
