--- a/help/help.adoc
+++ b/help/help.adoc
@@ -181,7 +181,7 @@ If set - synchronize only these objects. If empty - synchronize all available ob
 NOTE: If the commit ID cannot be found or if the procedure or steps cannot find, read, or correctly parse the change list, the entire DSL file structure is re-imported.
 |===
 
-image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png[ImportDslFromGitNew parameters,role="screenshot",width=480]
+image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png[ImportDslFromGitNew parameters,role="screenshot"]
 
 [[releaseNotes]]
 == Release notes
