--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2023-02.07 Valera Fessler <vfezler@cloudbees.com>
+  * 4.1.9: BEE-30105 - Fixed regression with multiline property values generation
+
 2022-11.23 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.8: BEE-27417 - Added support to run sub procedure 'importDslFromGitNew' for EC-DslDeploy plugin
            BEE-24707 - Fixed issue with import non project entities in case remote agent is used
