--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2023-02.16 Valera Fessler <vfezler@cloudbees.com>
+  * 4.2.0: BEE-30160 - Added YAML support
+
 2023-02.07 Valera Fessler <vfezler@cloudbees.com>
   * 4.1.9: BEE-30105 - Fixed regression with multiline property values generation
 
