--- a/help/help.adoc
+++ b/help/help.adoc
@@ -208,6 +208,10 @@ image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.2.0
+
+* Added YAML support
+
 === EC-DslDeploy 4.1.9
 
 * Fixed regression with multiline property values generation
