--- a/help/help.adoc
+++ b/help/help.adoc
@@ -208,10 +208,13 @@ image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.2.0
+
+* Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
+
 === EC-DslDeploy 4.1.10
 
 * Fixed duplication properties issue with original and encoded names
-* Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
 
 === EC-DslDeploy 4.1.9
 
