BEE-32453 Generate DSL catalog item can't generate DSL for Electric Cloud project - Unable to determine the current character (#87)
BEE-32453 Generate DSL catalog item can't generate DSL for Electric Cloud project - Unable to determine the current character

--- a/help/help.adoc
+++ b/help/help.adoc
@@ -208,6 +208,10 @@ image:cloudbees-common-sda::cd-plugins/ec-dsldeploy/help/importdslfromgitnew.png
 [[releaseNotes]]
 == Release notes
 
+=== EC-DslDeploy 4.2.0
+
+* Added 'httpIdleTimeout' argument into the 'generateDsl' plugin procedure
+
 === EC-DslDeploy 4.1.10
 
 * Fixed duplication properties issue with original and encoded names
